clusters/dextek/apps/auth/authentik/app/referencegrant.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-networking-security-policy-auth
  namespace: auth
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: network
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: downloads
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: databases
  to:
    - group: ""
      kind: Service
      name: ak-outpost-internal
    - group: ""
      kind: Service
      name: ak-outpost-external
