clusters/dextek/apps/auth/authentik/app/httproute-outpost.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ak-outpost-internal
  namespace: auth
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: ak-outpost-internal
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ak-outpost-external
  namespace: auth
spec:
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: ak-outpost-external
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
