clusters/dextek/apps/auth/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: root-domain-redirect
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - plexuz.xyz
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: sso.plexuz.xyz
            statusCode: 301
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-server
spec:
  hostnames:
    - sso.plexuz.xyz
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: authentik-server
          port: 80
